fix ie overflow issue

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -309,7 +309,7 @@ a:hover {
     position: relative;
     margin: 0 auto;    
     width: calc(100% - 40px);
-    // overflow: hidden;
+    overflow: hidden;
 
     #info {      
       position: absolute;
